crates/seesaw/tests/compile_fail/event_enum_untagged.stderr
error: #[event] cannot be applied to #[serde(untagged)] enums — untagged enums have no stable variant discriminator
 --> tests/compile_fail/event_enum_untagged.rs:6:10
  |
6 | pub enum BadEvent {
  |          ^^^^^^^^

warning: unused imports: `Deserialize` and `Serialize`
 --> tests/compile_fail/event_enum_untagged.rs:1:13
  |
1 | use serde::{Serialize, Deserialize};
  |             ^^^^^^^^^  ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
